[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cutecord"
version = "0.1.0"
description = "A cute, design-first wrapper around discord.py — beautiful embeds, all Discord components, built-in dotenv, and variable templates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["discord", "discord.py", "bot", "embed", "components"]
dependencies = [
    "py-cord>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cutecord*"]
